<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".Fragment.DetailsViewFragment"
android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <ImageView
        style="@style/Image"
        android:id="@+id/entry_image"
        android:contentDescription="@string/entry_image_description"/>
    <Button
        style="@style/TopManu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/mark_as_fav"
        android:paddingLeft="@dimen/default_margin"
        android:paddingRight="@dimen/default_margin"
        android:id="@+id/save_as_favorite_button"/>
    <TextView
        style="@style/Text"
        android:id="@+id/entry_description"
        android:text="@string/entry_description"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/Text"
            android:text="@string/entry_popularity"
            android:layout_width="wrap_content"
            android:textAlignment="textStart"/>
        <TextView
            style="@style/Text"
            android:id="@+id/entry_popularity"
            android:text="@string/entry_popularity"
            android:textAlignment="textStart" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/Text"
            android:text="@string/entry_rating"
            android:layout_width="wrap_content"
            android:textAlignment="textStart"/>
        <TextView
            style="@style/Text"
            android:id="@+id/entry_user_rating"
            android:textAlignment="textStart"
            android:text="@string/entry_rating"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/Text"
            android:text="@string/entry_release_date"
            android:layout_width="wrap_content"
            android:textAlignment="textStart"/>
        <TextView
            style="@style/Text"
            android:id="@+id/entry_release_date"
            android:textAlignment="textStart"
            android:text="@string/entry_release_date"/>
    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/colorHorizontalLine" />
    <TextView
        style="@style/HeadingText"
        android:text="@string/trailer_text"/>
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/video_list_recycle_view"/>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/colorHorizontalLine" />
    <TextView
        style="@style/HeadingText"
        android:text="@string/review"/>
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/review_list_recycle_view"/>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/colorHorizontalLine" />
</LinearLayout>
</ScrollView>
